<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_margin="8sp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp" />
          <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>
        
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:textSize="14sp" />
          <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textSize="14sp" />
      <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>
   
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration"
        android:textSize="14sp" />
      <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starttime"
        android:textSize="14sp" />
      <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
         />
      <View
    android:layout_width="match_parent"
    android:layout_height="2sp"
    android:background="@drawable/list_divider"/>

    </LinearLayout>

    <Button
        android:layout_margin="16sp"
        android:id="@drawable/raised_button"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:background="@color/teal"
        android:gravity="center"
        android:text="@string/close" />

</LinearLayout>
